[gd_scene load_steps=4 format=3 uid="uid://qlc0ewgx7a0r"]

[ext_resource type="Script" path="res://scripts/gold_orb.gd" id="1_tu0c5"]
[ext_resource type="Texture2D" uid="uid://qmx1pi0utiv8" path="res://assets/prototype-circle.png" id="2_ldre1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4b7r8"]
radius = 22.0227

[node name="Gold Orb" type="Area2D"]
script = ExtResource("1_tu0c5")

[node name="LifetimeBar" type="TextureProgressBar" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -32.0
offset_right = 96.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
max_value = 10.0
step = 0.01
value = 3.0
fill_mode = 4
texture_under = ExtResource("2_ldre1")
texture_progress = ExtResource("2_ldre1")
tint_under = Color(1, 0.921255, 0.554243, 1)
tint_progress = Color(1, 0.776471, 0, 1)

[node name="Prototype-circle" type="Sprite2D" parent="."]
modulate = Color(1, 0.866667, 0.101961, 1)
scale = Vector2(0.31, 0.31)
texture = ExtResource("2_ldre1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_4b7r8")

[node name="Lifetime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
